fixing scrollbar

--- a/frontend/snipbin/src/index.css
+++ b/frontend/snipbin/src/index.css
@@ -89,3 +89,20 @@
   background-position: center;
   background-repeat: no-repeat;
 }
+
+pre::-webkit-scrollbar {
+  height: 3px !important;
+  opacity: 0 !important;
+}
+
+pre::-webkit-scrollbar-thumb {
+  background: #606060 !important;
+}
+
+pre::-webkit-scrollbar:horizontal{
+  opacity: 0;
+}
+
+/* pre:hover > pre::-webkit-scrollbar:horizontal {
+  opacity: 100;
+} */
